fixed small overflow issue

--- a/css/master.css
+++ b/css/master.css
@@ -155,10 +155,11 @@ i.fas {
 	flex-direction: row;
 	align-items: center;
 	justify-content: flex-start;
+	overflow-x: auto;
 }
 
 .instruction .options>* {
-	margin: 1rem;
+	margin-right: 1rem;
 }
 
 .instruction .options>input[type=number], .instruction .options>input[type=text] {
